2004-10-12  Dalibor Topic <robilad@kaffe.org>

	* libraries/javalib/java/util/Date.java:
	Resynced with GNU Classpath.

	2004-10-12  Jeroen Frijters  <jeroen@frijters.net>

        * java/util/Date.java
        (Date(int,int,int), Date(int,int,int,int,int)): Delegate to other
        constructor.
        (Date(int,int,int,int,int,int)): Fixed to handle out-of-range
        arguments.
        (getTimezoneOffset): Inverted sign.

2004-10-12  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/thread.c
	(startSpecialThread): Use arg to get the specific arguments to start
	the special thread.
	(createDaemon): Use the real argument to the thread instead of
	exceptObj and exceptPtr to pass arguments.

	* kaffe/kaffevm/systems/unix-pthreads/thread-impl.c
	(activeThreadsLock, tLock): Use a native mutex lock instead of a kaffe
	lock for thread list.
	(TLOCK, TUNLOCK): Removed.
	(protectThreadList, unprotectThreadList): Added.
	(*): Replaced TLOCK and TUNLOCK by protectThreadList and
	unprotectThreadList.
	(jthread_walkLiveThreads): Protect the thread list while we are
	walking it.

2004-10-12  Dalibor Topic <robilad@kaffe.org>

	* libraries/clib/native/ZipFile.c:
	(java_util_zip_ZipFile_getZipData0) Cast size to size_t
	when invoking memcpy.

2004-10-12  Dalibor Topic <robilad@kaffe.org>

	* include/errors.h:
	Include support.h for execute_java_constructor prototype.
	(NEW_LANG_EXCEPTION, NEW_LANG_EXCEPTION_MESSAGE,
	NEW_IO_EXCEPTION, NEW_IO_EXCEPTION_MESSAGE) Added braces.

	* include/native.h:
	Include stddef.h for size_t.

	* kaffe/kaffevm/exception.c (throwException): Made prototype
	match declaration in header file exactly.

	* kaffe/kaffevm/exception.h:
	Include gtypes.h for uintp.

	* libraries/clib/native/ZipFile.c:
	Include errors.h, exception.h. Cleaned up includes.

2004-10-12  Dalibor Topic <robilad@kaffe.org>

	* include/native.h:
	(AllocArray) Changed prototype to use size_t for len. 
	Added parameter names.
	* kaffe/kaffevm/support.c: