@@ -1,5 +1,17 @@
 2004-10-12  Dalibor Topic <robilad@kaffe.org>
 
+	*  libraries/javalib/java/lang/SecurityManager.java:
+        Resynced with GNU Classpath.
+
+	2004-10-12  Jeroen Frijters  <jeroen@frijters.net>
+
+        * java/lang/SecurityManager.java
+        (checkPackageAccess, checkPackageDefinition): Pass complete
+        restriction.
+        (checkPackageList): Simplified and corrected the code.
+
+2004-10-12  Dalibor Topic <robilad@kaffe.org>
+
 	* libraries/javalib/java/util/Date.java:
 	Resynced with GNU Classpath.
 
